Goa generated code of new endpoint for creating policy autoimport configurations
