# gen/http/policy/server/encode_decode.go
@@ -255,6 +255,40 @@ func DecodeExportBundleRequest(mux goahttp.Muxer, decoder func(*http.Request) go
 	}
 }
 
+// EncodePolicyPublicKeyResponse returns an encoder for responses returned by
+// the policy PolicyPublicKey endpoint.
+func EncodePolicyPublicKeyResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
+		res, _ := v.(any)
+		enc := encoder(ctx, w)
+		body := res
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
+
+// DecodePolicyPublicKeyRequest returns a decoder for requests sent to the
+// policy PolicyPublicKey endpoint.
+func DecodePolicyPublicKeyRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (any, error) {
+	return func(r *http.Request) (any, error) {
+		var (
+			repository string
+			group      string
+			policyName string
+			version    string
+
+			params = mux.Vars(r)
+		)
+		repository = params["repository"]
+		group = params["group"]
+		policyName = params["policyName"]
+		version = params["version"]
+		payload := NewPolicyPublicKeyRequest(repository, group, policyName, version)
+
+		return payload, nil
+	}
+}
+
 // EncodeImportBundleResponse returns an encoder for responses returned by the
 // policy ImportBundle endpoint.
 func EncodeImportBundleResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
@@ -290,40 +324,6 @@ func DecodeImportBundleRequest(mux goahttp.Muxer, decoder func(*http.Request) go
 			return nil, err
 		}
 		payload := NewImportBundlePayload(length)
-
-		return payload, nil
-	}
-}
-
-// EncodePolicyPublicKeyResponse returns an encoder for responses returned by
-// the policy PolicyPublicKey endpoint.
-func EncodePolicyPublicKeyResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
-	return func(ctx context.Context, w http.ResponseWriter, v any) error {
-		res, _ := v.(any)
-		enc := encoder(ctx, w)
-		body := res
-		w.WriteHeader(http.StatusOK)
-		return enc.Encode(body)
-	}
-}
-
-// DecodePolicyPublicKeyRequest returns a decoder for requests sent to the
-// policy PolicyPublicKey endpoint.
-func DecodePolicyPublicKeyRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (any, error) {
-	return func(r *http.Request) (any, error) {
-		var (
-			repository string
-			group      string
-			policyName string
-			version    string
-
-			params = mux.Vars(r)
-		)
-		repository = params["repository"]
-		group = params["group"]
-		policyName = params["policyName"]
-		version = params["version"]
-		payload := NewPolicyPublicKeyRequest(repository, group, policyName, version)
 
 		return payload, nil
 	}
@@ -396,6 +396,43 @@ func DecodeListPoliciesRequest(mux goahttp.Muxer, decoder func(*http.Request) go
 			return nil, err
 		}
 		payload := NewListPoliciesPoliciesRequest(locked, rego, data, dataConfig)
+
+		return payload, nil
+	}
+}
+
+// EncodeSetPolicyAutoImportResponse returns an encoder for responses returned
+// by the policy SetPolicyAutoImport endpoint.
+func EncodeSetPolicyAutoImportResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
+		res, _ := v.(any)
+		enc := encoder(ctx, w)
+		body := res
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
+
+// DecodeSetPolicyAutoImportRequest returns a decoder for requests sent to the
+// policy SetPolicyAutoImport endpoint.
+func DecodeSetPolicyAutoImportRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (any, error) {
+	return func(r *http.Request) (any, error) {
+		var (
+			body SetPolicyAutoImportRequestBody
+			err  error
+		)
+		err = decoder(r).Decode(&body)
+		if err != nil {
+			if err == io.EOF {
+				return nil, goa.MissingPayloadError()
+			}
+			return nil, goa.DecodePayloadError(err.Error())
+		}
+		err = ValidateSetPolicyAutoImportRequestBody(&body)
+		if err != nil {
+			return nil, err
+		}
+		payload := NewSetPolicyAutoImportSetPolicyImportRequest(&body)
 
 		return payload, nil
 	}
